--- a/luci-theme-argon-leanimg/luasrc/view/themes/argon/footer.htm
+++ b/luci-theme-argon-leanimg/luasrc/view/themes/argon/footer.htm
@@ -44,7 +44,7 @@
 		<a class="luci-link" href="https://github.com/openwrt/luci">Powered by <%= ver.luciname %>
 			(<%= ver.luciversion %>)</a> /
 		<a href="https://github.com/jerrykuku/luci-theme-argon">ArgonTheme <%# vPKG_VERSION %></a> /
-		<%= ver.distversion %>
+		<a href="https://github.com/tianiue/lede/releases"><%= ver.distversion %></a>
 		<% if #categories > 1 then %>
 		<ul class="breadcrumb pull-right" id="modemenu">
 			<% for i, r in ipairs(categories) do %>
