--- a/luci-theme-infinityfreedom/luci-theme-infinityfreedom/files/templates/footer.htm
+++ b/luci-theme-infinityfreedom/luci-theme-infinityfreedom/files/templates/footer.htm
@@ -32,7 +32,7 @@
                 </div>
                 <footer class="mobile-hide">
                     <a href="https://github.com/openwrt/luci">Powered by <%= ver.luciname %> (<%= ver.luciversion %>)</a> /
-                    <%= ver.distversion %>
+                    <a href="https://github.com/tianiue/lede"><%= ver.distversion %></a>
                     <% if #categories > 1 then %>
                     <ul class="breadcrumb pull-right" id="modemenu">
                         <% for i, r in ipairs(categories) do %>
