--- a/luci-app-alist/luasrc/view/alist_status.htm
+++ b/luci-app-alist/luasrc/view/alist_status.htm
@@ -1,3 +1,13 @@
+<%
+	local uci = require 'luci.model.uci'.cursor()
+	ssl = uci:get_first('alist', 'alist', 'ssl')
+	if ssl == '1' then
+		protocol="https://"
+	else
+		protocol="http://"
+	end
+%>
+
 <script type="text/javascript">//<![CDATA[
 	XHR.poll(5, '<%=url("admin/nas/alist_status")%>', null,
 		function(x, st)
@@ -7,7 +17,7 @@
 			{
 				if (st.running)
 				{
-					tb.innerHTML = '<em style=\"color:green\"><b><%:The Alist service is running.%></b></em>' + "<input class=\"cbi-button-reload mar-10\" type=\"button\" value=\" <%:Click to open Alist%> \" onclick=\"window.open('http://" + window.location.hostname + ":" + st.port + "/')\"/>";
+					tb.innerHTML = '<em style=\"color:green\"><b><%:The Alist service is running.%></b></em>' + "<input class=\"cbi-button-reload mar-10\" type=\"button\" value=\" <%:Click to open Alist%> \" onclick=\"window.open('<%=protocol%>" + window.location.hostname + ":" + st.port + "/')\"/>";
 				}
 				else
 				{
